dark mode fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,3 +67,7 @@ h6 {
 #__next {
   isolation: isolate;
 }
+
+[data-color-theme="dark"] body {
+  background-color: #020817;
+}
