--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -156,7 +156,3 @@ a.secondary {
     justify-content: center;
   }
 }
-
-[data-color-theme="dark"] body {
-  background-color: #020817;
-}
